objects/ServiceAgentSessionEngagement__dll.object
<CustomObject>
    <fields>
        <fullName>AbandonmentStatus__c</fullName>
        <label>Abandonment Status</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>AbandonmentStatus</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentTTR__c</fullName>
        <label>Agent Time to Resolution</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>AgentTTR</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Channel</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopilotName__c</fullName>
        <label>Copilot Name</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>CopilotName</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Date</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeflectionStatus__c</fullName>
        <label>Deflection Status</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>DeflectionStatus</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngagementStatus__c</fullName>
        <label>Engagement Status</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>EngagementStatus</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationStatus__c</fullName>
        <label>Escalation Status</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>EscalationStatus</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsVerifiedUser__c</fullName>
        <label>Is Verified User</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>IsVerifiedUser</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KQ_SessionID__c</fullName>
        <label>KQ_SessionID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>KQ_SessionID</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>KEY_QUALIFIER</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessagingSessionID__c</fullName>
        <label>Messaging Session ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>MessagingSessionID</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumMessagesBeforeEscalation__c</fullName>
        <label>Number of Messages Before Escalation</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>NumMessagesBeforeEscalation</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumMessages__c</fullName>
        <label>Number of Messages</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>NumMessages</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumOffTopics__c</fullName>
        <label>Number of Off-Topic</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>NumOffTopics</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverallTTR__c</fullName>
        <label>Overall Time to Resolution</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>OverallTTR</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionEndTime__c</fullName>
        <label>Session End Time</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>SessionEndTime</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionID__c</fullName>
        <label>Session ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>SessionID</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <primaryIndexOrder>1</primaryIndexOrder>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionStartTime__c</fullName>
        <label>Session Start Time</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>SessionStartTime</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeBeforeEscalation__c</fullName>
        <label>Time Before Escalation</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>TimeBeforeEscalation</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>UserID</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>